# LightController_old

./: LICENSE  README.md
Computer/LightController/: .clang-format  CMakeLists.txt
Computer/LightController/cmake/: ConfigSafeGuards.cmake  Docs.cmake  Tools.cmake  Warnings.cmake
Computer/LightController/src/: main.cpp
Computer/LightController/src/API/ArduinoAudioInput/: ArduinoAudioInput.cpp  ArduinoAudioInput.hpp
Computer/LightController/src/API/BPM/: BPM.cpp  BPM.hpp
Computer/LightController/src/API/PageSelect/: PageSelect.cpp  PageSelect.hpp
Computer/LightController/src/backend/ArduinoAudioInput/: ArduinoAudioInput.cpp  ArduinoAudioInput.hpp
Computer/LightController/src/backend/ArduinoCommunication/: ArduinoCommunication.cpp  ArduinoCommunication.hpp  ArduinoCommunication2.cpp  ArduinoCommunication2.hpp
Computer/LightController/src/backend/ArduinoCommunication/Serial/: Serial.cpp  Serial.hpp  info.txt
Computer/LightController/src/backend/BPM/: BPM.cpp  BPM.hpp
Computer/LightController/src/backend/BPM_/: BPM_.cpp  BPM_.hpp
Computer/LightController/src/backend/PageSelect/: PageSelect.hpp
Computer/LightController/src/backend/other/: defines.hpp
Computer/LightController/src/frontend/: MasterWindow.cpp  MasterWindow.hpp
Computer/LightController/src/frontend/HomeWindow/: HomeWindow.cpp  HomeWindow.hpp
Computer/LightController/src/frontend/HomeWindow/AudioPlotWindow/: AudioPlotWindow.cpp  AudioPlotWindow.hpp
Computer/LightController/src/frontend/HomeWindow/BPMWindow/: BPMWindow.cpp  BPMWindow.hpp
Computer/LightController/src/frontend/HomeWindow/QuickControlWindow/: QuickControlWindow.cpp  QuickControlWindow.hpp
Computer/LightController/src/frontend/PageWindow/: PageWindow.cpp  PageWindow.hpp
Computer/LightController/src/frontend/other/BaseWindow/: BaseWindow.cpp  BaseWindow.hpp
